--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "vuetify": "^3.5.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "globals": "^15.0.0",
     "vite": "^5.1.6"
   }
 }
