--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-tel-input-vuetify": "^1.5.3",
     "vuetify": "^3.5.11"
   },
   "devDependencies": {
