--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "epic-spinners": "^2.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-tel-input-vuetify": "^1.5.3",
+    "vue3-toastify": "^0.2.1",
     "vuetify": "^3.5.11"
   },
   "devDependencies": {
