--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.6.8",
     "epic-spinners": "^2.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-router": "^4.3.2",
     "vue-tel-input-vuetify": "^1.5.3",
     "vue3-toastify": "^0.2.1",
     "vuetify": "^3.5.11"
@@ -23,6 +25,7 @@
     "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.0.0",
+    "sass": "^1.77.4",
     "vite": "^5.1.6"
   }
 }
