--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VUE_APP_NAME='recruitment portal'
-VUE_APP_VERSION='v0.0.1'
-VUE_APP_URL='http://localhost:8080'
-VUE_APP_API_BASE_URL='http://localhost:8000/api/v1/'
+VITE_APP_NAME='recruitment portal'
+VITE_APP_VERSION='v0.0.1'
+VITE_APP_URL='http://localhost:8080'
+VITE_APP_API_BASE_URL='http://127.0.0.1:8000/api/v1/'
